<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.abcnews.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_national"
        android:name="com.example.abcnews.ui.gallery.GalleryFragment"
        android:label="@string/menu_national"
        tools:layout="@layout/fragment_national" />

    <fragment
        android:id="@+id/nav_international"
        android:name="com.example.abcnews.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_international"
        tools:layout="@layout/fragment_international" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.abcnews.ui.tools.ToolsFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_technology"
        android:name="com.example.abcnews.ui.share.ShareFragment"
        android:label="@string/menu_technology"
        tools:layout="@layout/fragment_technology" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.abcnews.ui.send.SendFragment"
        android:label="@string/menu_health"
        tools:layout="@layout/fragment_health" />
    <fragment
        android:id="@+id/nav_entertainment"
        android:name="com.example.abcnews."
        android:label="@string/menu_entertainment"
        tools:layout="@layout/fragment_entertainment" />
</navigation>