<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_national"
            android:icon="@drawable/ic_national"
            android:title="@string/menu_national" />
        <item
            android:id="@+id/nav_international"
            android:icon="@drawable/ic_international"
            android:title="@string/menu_international" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_technology"
            android:title="@string/menu_technology" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_entertainment"
            android:title="@string/menu_entertainment" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
